--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 #### Core EditorConfig Options ####
 
 # All files 
-[*] 
+[*]
 
 # General
 charset = utf-8
@@ -18,7 +18,7 @@ tab_width = 4
 # New line preferences
 end_of_line = crlf
 insert_final_newline = true
-dotnet_style_prefer_conditional_expression_over_assignment= true:silent
+dotnet_style_prefer_conditional_expression_over_assignment = true:silent
 dotnet_style_operator_placement_when_wrapping = beginning_of_line
 dotnet_style_coalesce_expression = true:none
 dotnet_style_null_propagation = true:warning
@@ -79,7 +79,7 @@ tab_width = 4
 # Organize usings
 dotnet_separate_import_directive_groups = false
 dotnet_sort_system_directives_first = true
-file_header_template = This file is part of the Grimoire Project.\n\nCopyright (c) Netharia 2021-Present.\n\nAll rights reserved.\nLicensed under the AGPL-3.0 license. See LICENSE file in the project root for full license information.
+file_header_template = This file is part of the Grimoire Project.\n\nCopyright (c) Netharia 2021-Present.\n\nAll rights reserved.\nLicensed under the AGPL-3.0 license.See LICENSE file in the project root for full license information.
 
 # this. and Me. preferences
 dotnet_style_qualification_for_event = true:error
@@ -155,7 +155,7 @@ csharp_style_conditional_delegate_call = false:suggestion
 
 # Modifier preferences
 csharp_prefer_static_local_function = true:warning
-csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async
+csharp_preferred_modifier_order = public, private, protected, internal, static, extern, new, virtual, abstract, sealed, override, readonly, unsafe, volatile, async
 
 # Code-block preferences
 csharp_prefer_braces = false:suggestion
@@ -255,19 +255,19 @@ dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
 
 dotnet_naming_symbols.interface.applicable_kinds = interface
 dotnet_naming_symbols.interface.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
-dotnet_naming_symbols.interface.required_modifiers = 
+dotnet_naming_symbols.interface.required_modifiers =
 
 dotnet_naming_symbols.private_or_internal_field.applicable_kinds = field
 dotnet_naming_symbols.private_or_internal_field.applicable_accessibilities = internal, private, private_protected
-dotnet_naming_symbols.private_or_internal_field.required_modifiers = 
+dotnet_naming_symbols.private_or_internal_field.required_modifiers =
 
 dotnet_naming_symbols.types.applicable_kinds = class, struct, interface, enum
 dotnet_naming_symbols.types.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
-dotnet_naming_symbols.types.required_modifiers = 
+dotnet_naming_symbols.types.required_modifiers =
 
 dotnet_naming_symbols.non_field_members.applicable_kinds = property, event, method
 dotnet_naming_symbols.non_field_members.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
-dotnet_naming_symbols.non_field_members.required_modifiers = 
+dotnet_naming_symbols.non_field_members.required_modifiers =
 
 dotnet_naming_symbols.async_methods.applicable_kinds = method
 dotnet_naming_symbols.async_methods.applicable_accessibilities = public, internal, protected_internal, protected, private_protected
@@ -279,24 +279,24 @@ dotnet_naming_symbols.const_fields.required_modifiers = const
 
 # Naming styles
 
-dotnet_naming_style.pascal_case.required_prefix = 
-dotnet_naming_style.pascal_case.required_suffix = 
-dotnet_naming_style.pascal_case.word_separator = 
+dotnet_naming_style.pascal_case.required_prefix =
+dotnet_naming_style.pascal_case.required_suffix =
+dotnet_naming_style.pascal_case.word_separator =
 dotnet_naming_style.pascal_case.capitalization = pascal_case
 
 dotnet_naming_style.begins_with_i.required_prefix = I
-dotnet_naming_style.begins_with_i.required_suffix = 
-dotnet_naming_style.begins_with_i.word_separator = 
+dotnet_naming_style.begins_with_i.required_suffix =
+dotnet_naming_style.begins_with_i.word_separator =
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
 
 dotnet_naming_style.underscore_prefixed_camel_case.required_prefix = _
-dotnet_naming_style.underscore_prefixed_camel_case.required_suffix = 
-dotnet_naming_style.underscore_prefixed_camel_case.word_separator = 
+dotnet_naming_style.underscore_prefixed_camel_case.required_suffix =
+dotnet_naming_style.underscore_prefixed_camel_case.word_separator =
 dotnet_naming_style.underscore_prefixed_camel_case.capitalization = camel_case
 
-dotnet_naming_style.async_suffix.required_prefix = 
+dotnet_naming_style.async_suffix.required_prefix =
 dotnet_naming_style.async_suffix.required_suffix = Async
-dotnet_naming_style.async_suffix.word_separator = 
+dotnet_naming_style.async_suffix.word_separator =
 dotnet_naming_style.async_suffix.capitalization = pascal_case
 csharp_style_namespace_declarations = file_scoped:warning
 csharp_style_prefer_null_check_over_type_check = true:suggestion
