--- a/Grimoire.Domain/Grimoire.Domain.csproj
+++ b/Grimoire.Domain/Grimoire.Domain.csproj
@@ -7,4 +7,8 @@
     <WarningsAsErrors>Nullable</WarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0"/>
+  </ItemGroup>
+
 </Project>
