--- a/Grimoire.Test.Unit/Grimoire.Test.Unit.csproj
+++ b/Grimoire.Test.Unit/Grimoire.Test.Unit.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.12.1"/>
+    <PackageReference Include="FluentAssertions" Version="[7.0.0]"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.10"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1"/>
     <PackageReference Include="coverlet.collector" Version="6.0.2">
