--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
 # Remove the line below if you want to inherit .editorconfig settings from higher directories
 root = true
 
-#### Core EditorConfig Options ####
+#### Core EditorConfig Parameters ####
 
 # All files 
 [*]
