--- a/Grimoire/Grimoire.csproj
+++ b/Grimoire/Grimoire.csproj
@@ -11,12 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02454" />
-    <PackageReference Include="DSharpPlus.Commands" Version="5.0.0-nightly-02454" />
-    <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02454" />
+    <PackageReference Include="DSharpPlus" Version="5.0.0-nightly-02459" />
+    <PackageReference Include="DSharpPlus.Commands" Version="5.0.0-nightly-02459" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="5.0.0-nightly-02459" />
     <PackageReference Include="EntityFrameworkCore.Exceptions.PostgreSQL" Version="8.1.3"/>
     <PackageReference Include="MediatR" Version="12.4.1"/>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
       <PrivateAssets>all</PrivateAssets>
@@ -29,12 +29,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <TreatAsUsed>true</TreatAsUsed>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1-dev-02308" />
-    <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.1-dev-02317" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
   </ItemGroup>
 
@@ -72,7 +72,6 @@
     <Using Include="DSharpPlus"/>
     <Using Include="DSharpPlus.Entities"/>
     <Using Include="DSharpPlus.EventArgs"/>
-    <Using Include="DSharpPlus.SlashCommands"/>
-    <Using Include="DSharpPlus.SlashCommands.Attributes"/>
+    <Using Include="DSharpPlus.Commands"/>
   </ItemGroup>
 </Project>
