--- a/Grimoire.Settings/Grimoire.Settings.csproj
+++ b/Grimoire.Settings/Grimoire.Settings.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="EntityFrameworkCore.Exceptions.PostgreSQL" Version="8.1.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+      <PackageReference Include="System.Linq.Async" Version="6.0.3" />
     </ItemGroup>
 
 </Project>
